--- a/styles/styles.css
+++ b/styles/styles.css
@@ -16,8 +16,9 @@ body {
 .world {
 	overflow: hidden;
 	position: relative;
-	width: 100%;
-	height: 200px;
+	/* changed to autoscale in js!! */
+	/* width: 100%; */
+	/* height: 200px; */
 }
 
 .score {
